let log(<0) return NaN rather than -inf in POSIX/XOPEN modes, as requested in PR lib/41931 by Havard Eidnes (the PR refers to POSIX, the OSF/1 manpage suggests that XOPEN should behave that way too) being here, do the same to log10 and log2